--- a/src/index.html
+++ b/src/index.html
@@ -334,7 +334,7 @@
 		</div>
 
 		<div class="footer">
-			本图床由 <a href="https://www.baidu.com" target="_blank">Image Hosting</a> 和
+			本图床由 <a href="https://github.com/lixiaofei123/image-hosting-cfworkers/" target="_blank">Image Hosting</a> 和
 			<a href="https://www.cloudflare.com" target="_blank">Cloudflare</a> 驱动
 		</div>
 
