--- a/src/index.html
+++ b/src/index.html
@@ -477,7 +477,7 @@
 
 			const timepath = formatDate(new Date(), 'yyyy/MM/dd');
 			const newnname = getRandomFileName(name)
-			const key = `${timepath}/${newnname}`;
+			const key = `stroage/${timepath}/${newnname}`;
 			const uploadUrl = `${window.location.origin}/file/${key}`;
 
 			let uploadItem = document.createElement('div');
