--- a/src/index.html
+++ b/src/index.html
@@ -332,7 +332,7 @@
 			<div class="inner-titlecontainer">
 				<div class="titlebox">
 					<div class="title">上传并分享你的图片</div>
-					<div class="subtitle">将图片拖拽到页面的任意区域或者点击下面的上传按钮或者使用Ctrl+V粘贴图片来上传您的图片</div>
+					<div class="subtitle">将图片拖拽到页面的任意区域或者点击下面的上传按钮或者使用Ctrl+V粘贴图片或者图片链接来上传您的图片</div>
 					<button class="uploadbutton" id="uploadbutton">开始上传</button>
 				</div>
 			</div>
